--- a/templates/student/add_info.html
+++ b/templates/student/add_info.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -18,7 +19,6 @@
 /*========== VARIABLES CSS ==========*/
 :root {
   --header-height: 3.5rem;
-  --nav-width: 250px;
 
   /*========== Colors ==========*/
   --first-color: #4863A0;
@@ -115,46 +115,12 @@ img {
   font-weight: var(--font-medium);
   display: none;
 }
-
-.header__search {
-  display: flex;
-  padding: .40rem .75rem;
-  background-color: var(--body-color);
-  border-radius: .25rem;
-  margin-left: 15px;
-}
-
-.header__input {
-  width: 100%;
-  border: none;
-  outline: none;
-  background-color: var(--body-color);
-}
-
 .header__input::placeholder {
   font-family: var(--body-font);
   color: var(--text-color);
 }
 
-.header__icon, 
-.header__toggle {
-  font-size: 1.5rem;
-}
 
-.header__toggle {
-  color: var(--title-color);
-  cursor: pointer;
-}
-
-/*===== Show menu =====*/
-.show-menu {
-  left: 0;
-}
-
-/*===== Active link =====*/
-.active {
-  color: var(--first-color);
-}
 
 /* ========== MEDIA QUERIES ==========*/
 /* For small devices reduce search*/
@@ -183,13 +149,6 @@ img {
   .header__container {
     height: calc(var(--header-height) + .5rem);
   }
-  .header__search {
-    width: 300px;
-    padding: .55rem .75rem;
-  }
-  .header__toggle {
-    display: none;
-  }
   .header__logo {
     display: block;
   }
@@ -198,93 +157,214 @@ img {
     height: 40px;
     order: 1;
   }
-  
 }
-/*===== CARD CARD CARD =====*/
+/* 
+=========================== NEW CSS ======================================================= */
 
-.card2 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 90%;
-  height: 500px;
-  border-radius: 5px;
-  background-color: var(--card-color); 
-  float: center;
-  margin-top: 80px;
-  margin-bottom: 20px;
-  margin-right: 80px;
-  margin-left: 80px;
-  text-align: center;
-}
-
-.card2:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
- .studlistCard {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 2px;
-  text-align: centerd#f1f1f1;
-  border-radius: 5px;
-  transition: 0.3s;
-  margin-left: 10px;
-  background-color: var(--body-color);
-  
-  
-}
- .studlistCard:hover { box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
-
-.studColumn {
-  float: left;
-  width: 20%;
-  padding: 0 10px;
-}
-
-.studRow {margin: 0 -5px;}
-.studRow:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive columns */
-@media screen and (max-width: 600px) {
-  .studColumn {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
 /*===== CONTENT CONTENT =====*/
-/* .divHome{
-  margin: var(--header-height) 0 0 0;
-  padding: 1rem 1rem 0;
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  background-color: yellow;
-} */
-
-.divNotif{
-  max-width: 85%;
-  width: 960px;
-  margin: 0 auto;
+    .fac{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
-       .dHome{
-      display: flex;
-      padding: 20px;
-      width: 1200px;
-   padding-left: 5px;
-      min-height: 500px;
-      border-radius: 10px;
-      background-color: #FFFFFF;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-      float: center;
-      flex-wrap: row;
-      margin-left: auto;
- float: center;
-    }
+.buttonF {
+  position: fixed;
+width: 200%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+  }
+
+/* FORM AND BUTTONS */
+form.cleanForm {
+width: 800px;
+margin:0 auto;
+
+}
+form.cleanForm p {
+margin-bottom:15px;
+}
+
+.column{
+ width:250px;
+ float:left;
+ margin-right:20px;
+ padding: 10px;  
+
+}
+.row{
+ width: 370px;
+ float:right;
+
+ text-align: left;
+
+
+}
+.row1{
+ width: 450px;
+ float:left;
+ margin-left: 250px;
+ text-align: left;
+
+}
+
+.pText{
+  font-weight: 600;
+}
+.bText{
+  color: #000;
+}
+.form-field{
+  height: 900px;
+  width: 600px;
+}
+#id_feedback{
+  width: 1100px;
+    height: 200px;
+    overflow-y: scroll;
+}
+#id_remarks{
+  width: 1100px;
+    height: 200px;
+}
+.buttons{
+  width: 200px;
+  height: auto;
+  border: 5em;
+  cursor: pointer;
+  outline: none;
+  font-size: 16px;
+  -webkit-transform: translate(0);
+  transform: translate(0);
+  background-image: linear-gradient(45deg, #98b4ac, #d8c090);
+  padding: 0.7em 2em;
+  border-radius: 65px;
+  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+  -webkit-transition: box-shadow 0.25s;
+  transition: box-shadow 0.25s;
+  color: white;
+}
+.buttons .text {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #d8c090, #98b4ac);
+}
+
+.buttons:after {
+  content: "";
+  border-radius: 18px;
+  position: absolute;
+  margin: 4px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  background: #E5E4E2;
+}
+
+.buttons:hover {
+  background-image: linear-gradient(-45deg, #98b4ac, #d8c090);
+  box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+}
+
+.buttons:hover .text {
+  background-image: linear-gradient(-45deg, #d8c090, #98b4ac);
+}
+.card1 {
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 96.2%;
+  min-height: 530px;
+  border-radius: 5px;
+  background-color: #E9E4D4;
+  float: left;
+  margin-left: auto;
+/* margin: auto;
+  text-align: center; */
+  overflow: hidden;
+}
+#id_firstname{
+  width: 160px;
+  height: 25px;
+  color: #3A3B3C;
+}
+#id_lastname{
+  width: 160px;
+  height: 25px;
+  color: #3A3B3C;
+}
+#id_student_email{
+  width: 255px;
+  height: 25px;
+  color: #3A3B3C;
+}
+#id_year{
+  width: 95px;
+  height: 25px;
+  text-align: center;
+  color: #3A3B3C;
+}
+#id_studnumber{
+  width: 95px;
+  height: 25px;
+  color: #3A3B3C;
+}
+#id_mother_firstname{
+  width: 180px;
+  height: 22px;
+  color: #3A3B3C;
+}
+#id_mother_lastname{
+  width: 180px;
+  height: 22px;
+  color: #3A3B3C;
+}
+#id_parents_contact_number{
+  width: 180px;
+  height: 22px;
+  color: #3A3B3C;
+}
+#id_address{
+  width: 180px;
+  height: 22px;
+  color: #3A3B3C;
+}
+#id_father_firstname{
+  width: 180px;
+  height: 22px;
+  color: #3A3B3C;
+}
+#id_father_lastname{
+  width: 180px;
+  height: 22px;
+  color: #3A3B3C;
+}
+#id_parents_contact_number{
+  width: 180px;
+  height: 22px;
+  color: #3A3B3C;
+}
+#id_parents_email{
+  width: 180px;
+  height: 22px;
+  color: #3A3B3C;
+}
+
     </style>
 
         <title>Follow App Director</title>
@@ -299,61 +379,86 @@ img {
                 href="{% url 'student_home_view' %}" class="header__logo">FOLLOW APP</a>
       <div>
                        
-                              <p style="font-weight: bold; color: #FFFFFF;"> Registration </p>
+                              <p style="font-weight: bold; color: #FFFFFF;">Student Info Registration</p>
                                
                                    </div>
             </div>
         </header>
-
-
         <!--========== CONTENTS HOME ==========-->
           
-            <section id="homie" >
 
-{% block content %} 
+          {% block content %} 
+          
+          <div class="fac">
+            <button type="submit" class="buttonF"><i style="margin: auto;">Please fill in the credentials below</i></button>
+          </div>
+          <br>
+          <br>
+          <div class="card1">
+            <form action="#" class="cleanForm" method="POST">
+              {% csrf_token %}
+            
+            <div class="column">
+              <div class="row">     
+                <p class="pText"><b class="bText">First Name: &nbsp;</b>{{info.firstname}}</p> 
+                <p class="pText"><b class="bText" >Last Name: &nbsp;</b>{{info.lastname}}</p> 
+                <p class="pText"><b class="bText" >Student Number: &nbsp;</b>{{info.studnumber}}</p> 
+                <br> <br> 
+                <p class="pText"><b class="bText">Mother's Firstname: &nbsp;</b> {{info.mother_firstname}}</p>
+                <p class="pText"><b class="bText">Mother's Lastname: &nbsp;</b>  {{info.mother_lastname}}</p>
+            
+                <br>
+                <p class="pText"><b class="bText">Parent's  Contact Number: &nbsp;</b>
+                  <p style="text-align: left;"> {{info.parents_contact_number}}</p></p>
+               <p class="pText"><b class="bText">Address: &nbsp;</b>
+                 <p style="text-align: left;"> {{info.address}}</p></p>
+            
+            
+              </div>
+              
+              </div>
+              
+              
+            
+            
+            <div class="column">
+              <div class="row1"> 
+                <p class="pText"><b class="bText">Year Level:  &nbsp;</b>{{info.year}}</p>
+                <p class="pText"><b class="bText">Student Email: &nbsp;</b>{{info.student_email}}</p>  
+              </div>
+             
+              </div>
+              
+            
+              <div class="column">
+                <div class="row1"> 
+                  <br> <br> <br>
+                  <p class="pText"><b class="bText">Father's Firstname: &nbsp;</b> {{info.father_firstname}}</p>
+                  <p class="pText"><b class="bText">Father's Lastname: &nbsp;</b> {{info.father_lastname}}</p>
+                  <br> 
+                  <p class="pText"><b class="bText">Parents Email: &nbsp;</b>
+                    <p style="text-align: left;">  {{info.parents_email}}</p></p>
+                  <p class="pText"><b class="bText">Student's Contact Number: &nbsp;</b>
+                    <p style="text-align: left;"> {{info.student_contact_number}}</p></p>
+              
+              
+                  &nbsp;    &nbsp;   
+                </div>
+                <center> <button class="buttons" style="font-weight: bold; color: #454545;">Submit</button></center>
+               <br> <br>
+                </div>
+                
+            
+            </form>
+      
+          </div>
+          <br>  <br> <br>  <br> <br>  <br>
 
+               
+          {% endblock %} 
+                 
 
-    <form method="POST" action="">
-    {% csrf_token %}
-    
-    <div class="column">
-      <div class="row"> 
-        <p class="pText"><b class="bText">First Name: &nbsp;</b> {{info.firstname}}</p>
-        <p class="pText"><b class="bText">Last Name: &nbsp;</b>  {{info.lastname}}</p>
-        <p class="pText"><b class="bText">studnumber: &nbsp;</b> {{info.studnumber}}</p>
-        <p class="pText"><b class="bText">year: &nbsp;</b> {{info.year}}</p>
-        <!-- //duha duha ko idiplay ba ni sya -->
-        
-        <p class="pText"><b class="bText">student_email: &nbsp;</b> {{info.student_email}}</p>
-        
-
-
-        &nbsp;    &nbsp;   
-
-         <p class="pText"><b class="bText">mother_firstname: &nbsp;</b> {{info.mother_firstname}}</p>
-        <p class="pText"><b class="bText">mother_lastname: &nbsp;</b>  {{info.mother_lastname}}</p>
-        <p class="pText"><b class="bText">father_firstname: &nbsp;</b> {{info.father_firstname}}</p>
-        <p class="pText"><b class="bText">father_lastname: &nbsp;</b> {{info.father_lastname}}</p>
-        
-         <p class="pText"><b class="bText">student_contact_number: &nbsp;</b> {{info.student_contact_number}}</p>
-        <p class="pText"><b class="bText">parent_contact_number: &nbsp;</b>  {{info.parents_contact_number}}</p>
-        <p class="pText"><b class="bText">address: &nbsp;</b> {{info.address}}</p>
-        <p class="pText"><b class="bText">parents_email: &nbsp;</b> {{info.parents_email}}</p>
-
-      </div>
-      </div>
-    <div class="column1">
-      <div class="row1"> 
-        <div class="wrap">
-          <button type="submit" class="button">Submit</button>
-        </div>
-      </div>
-      </div>
-</form>
-     
-{% endblock %} 
-       
-               </section>
+               
             <!-- </div> -->
 
 
